As an app developer I want to be able to delete and order https://trello.com/c/fsuEYEhz/18-as-an-app-developer-i-want-to-be-able-to-update-orders
